CB-18993 Improve salt password rotation fallback implementation
Simplified the rebootstrap step by refactoring it out from the bootstrap step - this way the salt states will not be uploaded, and only the gateway nodes have to be rebootstrapped.